pod3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  namespace: dev
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: 128Mi
        cpu: 0.3
      limits:
        memory: 128Mi
        cpu: 0.3
