allow-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-allow-ns
spec:
  podSelector:
    matchLabels:
      team: devops
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
            matchLabels:
              dev: kube
